Long form generation

--- a/cog.yaml
+++ b/cog.yaml
@@ -12,6 +12,7 @@ build:
     - "torchaudio==2.0.0"
     - "tqdm==4.65.0"
     - "transformers==4.28.1"
+    - "nltk==3.8.1"
   run:
     - mkdir -p /root/.cache/torch/hub/checkpoints/ && wget --output-document "/root/.cache/torch/hub/checkpoints/encodec_24khz-d7cc33bc.th" "https://dl.fbaipublicfiles.com/encodec/v0/encodec_24khz-d7cc33bc.th"
 
