Remove nltk dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,7 @@ dependencies = [
     "tokenizers",
     "torch",
     "tqdm",
-    "transformers",
-    "nltk"
+    "transformers"
 ]
 
 [project.urls]
